--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="fm">
                 <h3>Titolo: {{title}}</h3>
                 <h4>Titolo originale: {{original_title}}</h4>
-                <p>Lingua: {{original_language}}</p>
+                <p>Lingua: {{{original_language}}}</p>
                 <p>Voto: {{vote_average}}</p>
             </div>
 
