--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Boolflix</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
 
@@ -20,7 +21,7 @@
                 <h3>Titolo: {{title}}</h3>
                 <h4>Titolo originale: {{original_title}}</h4>
                 <p>Lingua: {{{original_language}}}</p>
-                <p>Voto: {{vote_average}}</p>
+                <p>Voto: {{{vote_average}}}</p>
             </div>
 
         </script>
